# CADHY

./: .env.example  .gitignore  .vercelignore  CADHY-PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.json  bunfig.toml  components.json  crush.json  cspell.json  opencode.json  package.json  tsconfig.json  turbo.json  vercel.json
.agents/: ARCHITECTURE.md  BEST-PRACTICES.md  CONVENTIONS.md  QUICKSTART.md  README.md  advanced-rendering-implementation.md
.agents/context/: ARCHITECTURE.md  RELEASE-PROCESS.md  RELEASES.md  VERSION.md
.agents/memories/: CAD-ICONS-INTEGRATION.md  MEMORIES.md
.agents/plans/: ARCHITECTURE-REFACTOR.md  CADHY-CAD-EVOLUTION.md  CADHY-FULL-CAD-IMPLEMENTATION.md  CHILLI3D-IMPROVEMENTS-PLAN.md  COMPLETED-WORK-SUMMARY.md  DESKTOP-APP-REORGANIZATION.md  DESKTOP-REORGANIZATION.md  ICON-SYSTEM-STRATEGY.md  IMPLEMENTATION-STATUS.md  INDEX.md  PHASE-1-CODE-QUALITY.md  PLASTICITY-ARCHITECTURE-PATTERNS.md  REFACTOR-OPENCODE-PATTERNS.md  ROADMAP-2025.md
.agents/reports/: BVH-ICONS-STATUS.md  CAD-OPERATIONS-AUDIT.md  CAD-OPERATIONS-GAP-ANALYSIS.md  CAD-OPERATIONS-IMPLEMENTATION.md  CHILLI3D-CADHY-COMPARISON.md  CHILLI3D-COMPARISON.md  CHILLI3D-INTEGRATION-STATUS.md  IMPLEMENTATION-SUMMARY.md  PHASE-2-IMPLEMENTATION-PLAN.md  REORGANIZATION-SUMMARY.md
.agents/rules/: CORE-RULES.md
.agents/standards/: SHADCN-V2.md  SPACING.md  TYPOGRAPHY.md
.cargo/: config.toml
.changeset/: README.md  config.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-web.yml  release-app.yml  release.yml
.husky/: pre-commit
apps/desktop/: bunfig.toml  components.json  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/public/: cad-icons.js
apps/desktop/public/textures/: manifest.json
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  macos_menu.rs  main.rs
apps/desktop/src-tauri/src/auth/: gemini.rs  keyring.rs  mod.rs
apps/desktop/src-tauri/src/commands/: cad.rs  chat.rs  credits.rs  curves.rs  drawing.rs  drawing_export.rs  dxf.rs  geometry.rs  hydraulics.rs  ifc.rs  mod.rs  project.rs  system.rs
apps/desktop/src/__tests__/: cad-operations-persistence.test.ts  chat-store.test.ts  default-hotkeys.test.ts  error-boundary.test.tsx  hotkey-registry.test.ts  hydraulics-service.test.ts  layout-store.test.ts  material-pool.test.ts  measurement-tools.test.ts  modeller-store.test.ts  project-store.test.ts  recent-projects-store.test.ts  setup.ts  snap-manager.test.ts  thumbnail-service.test.ts  use-platform.test.ts  use-sounds.test.ts  use-units.test.ts
apps/desktop/src/app/: App.tsx
apps/desktop/src/commands/: index.ts
apps/desktop/src/components/: ErrorBoundary.tsx
apps/desktop/src/hooks/: index.ts  use-ai-chat.ts  use-ai-gallery.ts  use-ai-provider.ts  use-app-hotkeys.ts  use-auto-save.ts  use-cad-operation-hotkeys.ts  use-cad-operations.ts  use-cad-preview.ts  use-cad.ts  use-command.ts  use-dimensioning.ts  use-edge-detection.ts  use-hotkey.ts  use-pbr-textures.ts  use-platform.ts  use-sounds.ts  use-topological-selection.ts  use-topology.ts  use-units.ts  use-updater.ts  use-virtual-list.ts  useAIChat.ts  useCAD.ts  usePBRTextures.ts  useVirtualList.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/services/: ai-service.ts  cad-operations-init.ts  cad-service.ts  chat-persistence.ts  default-hotkeys.ts  export-service.ts  hotkey-registry.ts  index.ts  instancing-manager.ts  lod-manager.ts  material-pool.ts  measurement-tools.ts  project-service.ts  section-tool.ts  snap-manager.ts  tauri-service.ts  texture-service.ts  thumbnail-service.ts
apps/desktop/src/stores/: autosave-store.ts  chat-store.ts  credits-store.ts  dimensioning-store.ts  drawing-store.ts  hotkey-store.ts  layout-store.ts  (+9 more)
apps/web/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: 404.html  manifest.json  robots.txt  sitemap.xml
apps/web/scripts/: generate-search-index.ts
apps/web/src/: main.tsx  vite-env.d.ts
crates/cadhy-cad/: Cargo.toml  build.rs
crates/cadhy-cad/cpp/: bridge.cpp
crates/cadhy-cad/cpp/include/: bridge.h
crates/cadhy-cad/src/: config.rs  dxf_import.rs  error.rs  ffi.rs  lib.rs  mesh.rs  operations.rs  primitives.rs  projection.rs  topology.rs
crates/cadhy-core/: Cargo.toml
crates/cadhy-core/src/: geometry.rs  graph.rs  id.rs  lib.rs  units.rs
crates/cadhy-core/tests/: geometry_tests.rs  graph_tests.rs  id_tests.rs  units_tests.rs
crates/cadhy-export/src/: lib.rs
crates/cadhy-hydraulics/: Cargo.toml
crates/cadhy-hydraulics/src/: alignment.rs  characteristic_curves.rs  corridor.rs  gate_flow.rs  gvf_analysis.rs  hydraulics.rs  lib.rs  optimization.rs  saint_venant.rs  sections.rs  sediment_transport.rs  structures.rs  transitions.rs
crates/cadhy-hydraulics/tests/: alignment_tests.rs  corridor_tests.rs  hydraulic_jump_tests.rs  hydraulics_tests.rs  sections_tests.rs  structures_tests.rs  transitions_tests.rs
crates/cadhy-ifc/src/: exporter.rs  parser.rs  types.rs
crates/cadhy-ifc/tests/: integration_test.rs
crates/cadhy-mesh/src/: params.rs
crates/cadhy-project/: Cargo.toml
crates/cadhy-project/src/: lib.rs
docs/: EVALUACION-SISTEMA-PLANOS.md  HOTKEYS-SYSTEM.md  MACOS-BUNDLING.md
scripts/: README.md  download-textures.ts  migrate-to-logger.ps1  migrate-to-logger.sh  release.sh  vercel-ignore.sh
scripts/core/: dev-all.ts  run-cross.ts  test-react.ts
scripts/deploy/: index.ts
scripts/dev/: kill-dev-ports.ps1  kill-dev-ports.sh  run-with-occt.ps1  run-with-occt.sh
scripts/occt/: add-to-path.ps1  copy-dlls.ps1  copy-dylibs-macos.sh  fix-dylib-paths-macos.sh  remove-from-path.ps1  setup.ps1
scripts/release/: index.ts  trigger.ps1
(+286 files in other folders)
