[package]
name = "cadhy-cad"
version.workspace = true
edition.workspace = true
description = "OpenCASCADE 7.9.2 bindings for CADHY"
license.workspace = true
build = "build.rs"

[dependencies]
# Safe C++/Rust FFI
cxx.workspace = true

# Error handling
thiserror.workspace = true

# Serialization (for projection, section, dimensions types)
serde.workspace = true

[build-dependencies]
# C++ compilation and linking
cc = "1.0"
cxx-build = "1.0"

[features]
default = []
# Use debug OCCT libraries (with .pdb files)
debug-occt = []

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true

