[package]
name = "cadhy-core"
version.workspace = true
edition.workspace = true
description = "Core types and utilities for CADHY"
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

